traversal.snake.Snake.scala.error
Compilation error:
Snake:10: error: type mismatch;
 found   : Unit
 required: Boolean
      droite()
            ^Snake:18: error: type mismatch;
 found   : Unit
 required: Boolean
      gauche()
            ^Snake:22: error: type mismatch;
 found   : Unit
 required: Boolean
      return
      ^Snake:28: error: type mismatch;
 found   : Unit
 required: Boolean
    if(estFaceMur==true){
                        ^Snake:28: error: type mismatch;
 found   : Unit
 required: Boolean
    if(estFaceMur==true){
    ^